samples/_failures_safe/1761658837_7c0851_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94165c20.c: In function ‘main’:
./samples/SAFE/__tmp_94165c20.c:146:16: error: missing terminating " character
  146 |         printf("\
      |                ^~
./samples/SAFE/__tmp_94165c20.c:146:9: error: expected expression at end of input
  146 |         printf("\
      |         ^~~~~~
./samples/SAFE/__tmp_94165c20.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94165c20.c:146:9: error: expected declaration or statement at end of input
